# LexNorm

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_add_scan_result.py
deliverables/: 01-12-2022 Kuruluş İlanı.json  22-12-2025-Denetçi-Değişikliği.json  target-scan-result.json
scripts/: run_consolidation.py  run_extract_text.py  seed_users.py
scripts/seed_data/: users.json
src/: main.py
src/api/: router.py
src/api/v1/: authentication.py  scan_document.py
src/consolidation/: __init__.py  articles_consolidation.py  board_members_table.py  company_info_table.py  protocols.py  service.py  utils.py
src/core/: auth_handler.py  base_crud.py  celery_app.py  config.py  database.py  utils.py
src/cruds/: authentication.py  scan_result.py
src/models/: __init__.py  authentication.py  scan_result.py
src/pipelines/: __init__.py  base_pipeline.py  config.py  document_text_extraction.py  extraction_pipeline.py  factory.py  hallucination_check.py  llm_client.py  llm_messages.py  ocr_executors.py  prompt_enum.py  protocols.py  target_company_filter.py
src/schemas/: authentication.py  extraction.py  scan_result.py
src/services/: __init__.py  target_scan_service.py
src/tasks/: __init__.py  target_scan.py
tests/: test_consolidation.py  test_extraction_pipeline.py  test_scan_document_api.py  test_target_company_filter.py  test_target_scan_task.py
