[project]
name = "lexnorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "autoflake>=2.3.3",
    "bcrypt>=5.0.0",
    "black>=26.1.0",
    "fastapi>=0.135.1",
    "fastapi-limiter>=0.1.6",
    "isort>=8.0.1",
    "ollama>=0.6.1",
    "paddleocr>=3.3.3",
    "paddlepaddle>=3.2.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pymupdf>=1.27.1",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "celery>=5.6.2",
    "pydantic[email]>=2.12.5",
]
[project.optional-dependencies]
docx = ["python-docx>=1.1.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
